# SpeechAIfeedback

./: README_DEPLOYMENT.md  ai_analyzer.py  app.py  audio_processor.py  main.py  pyproject.toml  railway.toml  replit.md  requirements.txt  speech_analyzer.py  visualizations.py
attached_assets/: Pasted-Error-during-analysis-Failed-to-load-audio-file-Decoding-failed-ffmpeg-returned-error-code-69-O-1756077597287_1756077597287.txt  Pasted-Error-during-analysis-Transcription-failed-Decoding-failed-ffmpeg-returned-error-code-69-Output-1756077724883_1756077724884.txt
